# MarchingCompute

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md
libs/glad/include/glad/: glad.h
libs/glad/src/: glad.c
res/: imgui.ini
res/shaders/: Default.frag  Default.vert  IndirectCounter.comp  MarchingCubes.comp  MarchingCubes.frag  MarchingCubes.vert  MarchingCubes2.frag  MarchingCubes2.vert  MyShader.vert
src/core/: BaseGame.cpp  BaseGame.h  Constants.h  FileSystem.cpp  FileSystem.h  InputListener.h  Window.cpp  Window.h
src/game/: FirstPersonGame.cpp  FirstPersonGame.h  Game.cpp
src/graphics/: Buffer.cpp  Buffer.h  Camera.cpp  Camera.h  Material.cpp  Material.h  Primitive.cpp  Primitive.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h
src/terrain/: MarchingCubes.h  VoxelTerrain.cpp  VoxelTerrain.h
